--- a/src/index.css
+++ b/src/index.css
@@ -57,17 +57,21 @@
 
 .card-slider {
   overscroll-behavior-inline: contain;
+  scroll-snap-type: inline mandatory;
+  scroll-padding-inline: 1rem;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.card-slider::-webkit-scrollbar {
+  display: none;
+}
+
+.card-slider > * {
+  scroll-snap-align: start;
 }
 
 .card-slide > img {
   inline-size: 100%;
-}
-
-.card-snaps {
-  scroll-snap-type: inline mandatory;
-  scroll-padding-inline: 1rem;
-}
-
-.card-snaps > * {
-  scroll-snap-align: start;
 }
